syntax = "proto3";

package pl.electricshop.grpc;

option java_multiple_files = true;
option java_package = "pl.electricshop.common.grpc.auth";

// ============================================
// Auth Service - gRPC API for authentication
// Used by API Gateway for fast token operations
// ============================================

service AuthService {
    // Login - returns access + refresh tokens
    rpc Login(LoginRequest) returns (AuthResponse);

    // Register new user
    rpc Register(RegisterRequest) returns (AuthResponse);

    // Refresh access token using refresh token
    rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);

    // Validate token and get user info (for internal services)
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);

    // Logout - invalidate refresh token
    rpc Logout(LogoutRequest) returns (LogoutResponse);
}

// ============================================
// Request Messages
// ============================================

message LoginRequest {
    string email = 1;
    string password = 2;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message ValidateTokenRequest {
    string access_token = 1;
}

message LogoutRequest {
    string refresh_token = 1;
    string user_id = 2;
}

// ============================================
// Response Messages
// ============================================

message AuthResponse {
    bool success = 1;
    string message = 2;
    optional string access_token = 3;
    optional string refresh_token = 4;
    optional UserInfo user = 5;
}

message ValidateTokenResponse {
    bool valid = 1;
    string message = 2;
    optional UserInfo user = 3;
}

message LogoutResponse {
    bool success = 1;
    string message = 2;
}

// ============================================
// Common Messages
// ============================================

message UserInfo {
    string user_id = 1;
    string email = 2;
    string role = 3;
}
